added bootstrap -inc style for vector algebra

--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,8 @@ body{
 	margin: 0;
 	padding: 0;
 }
-.topic{ display: none; }
-ul#nav{ list-style-type:none; }
-ul#nav li{ display: inline; margin-right: 10px;}
+
+a.accordion-toggle:hover{
+	text-decoration: none;
+}
+
