--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,34 @@
 body{
 	margin: 0;
 	padding: 0;
+	height: 100%;
 }
 
 a.accordion-toggle:hover{
 	text-decoration: none;
 }
 
+/* Wrapper for page content to push down footer */
+#wrap {
+	min-height: 100%;
+	height: auto !important;
+	height: 100%;
+	/* Negative indent footer by it's height */
+	margin: 0 auto -30px;
+}
+
+/* Set the fixed height of the footer here */
+#push,
+#footer {
+	height: 60px;
+}
+
+/* Lastly, apply responsive CSS fixes as necessary */
+@media (max-width: 767px) {
+	#footer {
+		margin-left: -20px;
+		margin-right: -20px;
+		padding-left: 20px;
+		padding-right: 20px;
+	}
+}
